# POPCAT

./: .gitignore  README.md  main.py  popcat-automated.py  pyproject.toml  run-popcat.bat  test.py
venv-popcat/: pyvenv.cfg
venv-popcat/Scripts/: activate  activate.bat
