[tool.poetry]
name = "popcat"
version = "0.1.0"
description = ""
authors = ["jsonnnnn <cjsonnnnn@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
